src/app/components/punchPage.css
.punch {
  max-width: 100%;
  margin: 0;
  flex-basis: 100%;
  display: flex;
  flex-direction: column;
  height: calc(100vh - 48px);
  overflow: auto;
}

.punch h1 {
  width: 100%;
}

.punch .bold-label label {
  font-weight: bold;
}

.punch .input-row {
  display: inline-flex;
  width: 100%;
  margin: 0.5rem 0 1rem;
}

.punch .input-row .right {
  margin-left: 30px;
}

.punch .panels-wrapper {
  flex-basis: 100%;
  display: flex;
  flex-direction: row;
  min-height: 100px;
}

.punch .panels-wrapper .punch_form,
.punch .panels-wrapper .omsorgspenger_punch_form {
  margin-right: 0.5rem;
  flex-basis: 100%;
  overflow-y: auto;
  border-color: #a0a0a0;
}

.punch .panels-wrapper .punch_form .container,
.punch .panels-wrapper .omsorgspenger_punch_form .container {
  text-align: left;
  padding-top: 0;
  padding-left: 0;
  margin-left: 0;
}

.punch .panels-wrapper .punch_form::-webkit-scrollbar,
.punch .panels-wrapper .omsorgspenger_punch_form::-webkit-scrollbar {
  width: 0.5rem;
}

.punch .panels-wrapper .punch_form::-webkit-scrollbar-track,
.punch .panels-wrapper .omsorgspenger_punch_form::-webkit-scrollbar-track {
  border-radius: 2px;
}

.punch .panels-wrapper .punch_form::-webkit-scrollbar-thumb,
.punch .panels-wrapper .omsorgspenger_punch_form::-webkit-scrollbar-thumb {
  background: #a0a0a0;
  border-radius: 2px;
}

.punch .panels-wrapper .punch_form::-webkit-scrollbar-thumb:hover,
.punch .panels-wrapper .omsorgspenger_punch_form::-webkit-scrollbar-thumb:hover {
  background: #6a6a6a;
}

.punch .panels-wrapper .punch_form .submit-knapper,
.punch .panels-wrapper .omsorgspenger_punch_form .submit-knapper {
  display: flex;
}

.punch .panels-wrapper .punch_form .submit-knapper .vent-knapp,
.punch .panels-wrapper .omsorgspenger_punch_form .submit-knapper .vent-knapp {
  margin-left: 1rem;
}

.punch .panels-wrapper .punch_form .knapperad .knapp1,
.punch .panels-wrapper .omsorgspenger_punch_form .knapperad .knapp1 {
  margin-right: 1rem;
}

.punch .panels-wrapper .punch_form.navds-box,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box {
  margin-right: 0.5rem;
  flex-basis: 100%;
  overflow-y: auto;
  border-color: #a0a0a0;
}

.punch .panels-wrapper .punch_form.navds-box .container,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box .container {
  text-align: left;
  padding-top: 0;
  padding-left: 0;
  margin-left: 0;
}

.punch .panels-wrapper .punch_form.navds-box::-webkit-scrollbar,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box::-webkit-scrollbar {
  width: 0.5rem;
}

.punch .panels-wrapper .punch_form.navds-box::-webkit-scrollbar-track,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box::-webkit-scrollbar-track {
  border-radius: 2px;
}

.punch .panels-wrapper .punch_form.navds-box::-webkit-scrollbar-thumb,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box::-webkit-scrollbar-thumb {
  background: #a0a0a0;
  border-radius: 2px;
}

.punch .panels-wrapper .punch_form.navds-box::-webkit-scrollbar-thumb:hover,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box::-webkit-scrollbar-thumb:hover {
  background: #6a6a6a;
}

.punch .panels-wrapper .punch_form.navds-box .submit-knapper,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box .submit-knapper {
  display: flex;
}

.punch .panels-wrapper .punch_form.navds-box .submit-knapper .vent-knapp,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box .submit-knapper .vent-knapp {
  margin-left: 1rem;
}

.punch .panels-wrapper .punch_form.navds-box .knapperad .knapp1.navds-button,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box .knapperad .knapp1.navds-button {
  margin-right: 1rem;
}

.punch .panels-wrapper .punch_form.navds-box .arbeidstider,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box .arbeidstider {
  margin-top: 1rem;
}

.punch .panels-wrapper .punch_form.navds-box .arbeidstider .arbeidstid-hjelpetext,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box .arbeidstider .arbeidstid-hjelpetext {
  margin-left: 0.5rem;
}

.punch .panels-wrapper .punch_form.navds-box .klokkeslett,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box .klokkeslett {
  margin-left: 0.5rem;
}

.punch .panels-wrapper .punch_form.navds-box .arbeidstidInfo,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box .arbeidstidInfo {
  margin-top: 1rem;
}

.punch .panels-wrapper .punch_form.navds-box .countryselect,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box .countryselect {
  padding-top: 1rem;
}

.punch .panels-wrapper .punch_form.navds-box .ikkeregistrert,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box .ikkeregistrert {
  font-family: 'Source Sans Pro', Arial, sans-serif;
  font-size: 1.1rem;
  line-height: 1.375rem;
  font-weight: 600;
}

.punch .panels-wrapper .punch_form.navds-box .listepanel,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box .listepanel {
  background-color: #eaeaea;
  margin-bottom: 1rem;
  padding: 1rem;
  border-radius: 5px;
}

.punch .panels-wrapper .punch_form.navds-box .frilanserpanel,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box .frilanserpanel {
  background-color: #eaeaea;
  margin: 1rem 0;
}

.punch .panels-wrapper .punch_form.navds-box .frilanserpanel .listepanel,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box .frilanserpanel .listepanel {
  margin: 0.5rem 0 1rem -1rem;
}

.punch .panels-wrapper .punch_form.navds-box .frilanserpanel .frilanser-startdato,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box .frilanserpanel .frilanser-startdato {
  margin-bottom: 20px;
}

.punch .panels-wrapper .punch_form.navds-box .sn-alertstripe,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box .sn-alertstripe {
  margin-top: 1rem;
}

.punch .panels-wrapper .punch_form.navds-box .selvstendigpanel,
.punch .panels-wrapper .omsorgspenger_punch_form.navds-box .selvstendigpanel {
  background-color: #eaeaea;
  padding-top: 0;
  margin: 1rem 0;
}
/* ... */

